# GameOfLife

./: .gitignore  .gitmodules  CMakeLists.txt  Population_Seed.txt  Population_Seed_With_Errors.txt  README.md
docs/: Doxyfile
include/: GameOfLife.h  ScreenPrinter.h
include/Cell_Culture/: Cell.h  Population.h
include/GoL_Rules/: RuleFactory.h  RuleOfExistence.h  RuleOfExistence_Conway.h  RuleOfExistence_Erik.h  RuleOfExistence_VonNeumann.h
include/Support/: FileLoader.h  Globals.h  MainArguments.h  MainArgumentsParser.h  SupportStructures.h
src/: GameOfLife.cpp  ScreenPrinter.cpp  main.cpp
src/Cell_Culture/: Cell.cpp  Population.cpp
src/GoL_Rules/: RuleFactory.cpp  RuleOfExistence.cpp  RuleOfExistence_Conway.cpp  RuleOfExistence_Erik.cpp  RulesOfExistence_VonNeumann.cpp
src/Support/: FileLoader.cpp  Globals.cpp  MainArguments.cpp  MainArgumentsParser.cpp
test/: test-cell.cpp  test-file_loader.cpp  test-gameoflife.cpp  test-main.cpp  test-mainarguments.cpp  test-mainargumentsparser.cpp  test-population.cpp  test-ruleOfExistence_VonNeumann.cpp  test-ruleOfExistence_conway.cpp  test-screenprinter.cpp  test_fileloader.cpp  test_stub.cpp  testa-ruleOfExistenceErik.cpp  testa-rulefactory.cpp
